--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,6 @@ platform = teensy
 board = teensy40
 framework = arduino
 lib_deps = 
-	bblanchon/ArduinoJson@^6.17.0
-	tomstewart89/BasicLinearAlgebra@^2.3
+	bblanchon/ArduinoJson@^7.4.1
+	tomstewart89/BasicLinearAlgebra@^5.1
+	sparkfun/SparkFun 9DoF IMU Breakout - ICM 20948 - Arduino Library@^1.3.1
